<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
        <string name="app_name">Manual</string>
        <string name="boot">Boot</string>
        <string name="network">Wireless Transmission</string>
        <string name="voice">Voice Remote Control</string>
        <string name="basic">Basic Introduction</string>
        <string name="playback">Volume Adjustment</string>
        <string name="harddisk">Hard Disk</string>
        <string name="harddisk_gsking_x">Hard Disk\n(GS-King X)</string>
        <string name="personalization">Personalization</string>
        <string name="commonProblems">Common problems</string>
        <string name="shotcut">Quick Settings</string>
        <string name="content_title">Beelink TV BOX Manual</string>
    <string name="gt1mini_title" translatable="false">GT1 mini</string>
    <string name="gt1mini_content" translatable="false">( GT1 mini-②, GT1 mini-A )</string>
    <string name="gt1_title" translatable="false">GT1</string>
    <string name="gt1_content" translatable="false">( GT1-A )</string>
    <string name="gtking_title" translatable="false">GT-king</string>
    <string name="gtking_content" translatable="false"></string>
    <string name="gtking_pro_title" translatable="false">GT-king Pro</string>
    <string name="gtking_pro_content" translatable="false"></string>
    <string name="gsking_x_title" translatable="false">GS-king X</string>
    <string name="gsking_x_content" translatable="false"></string>
    <string name="bootup_title">Boot</string>
    <string name="bootup_content">1. Power on and power on automatically after power off \n 2. With the power on, point the remote control at the TV box and press the power button on the remote control to turn it on.</string>
    <string name="shutdown_title">Shutdown</string>
    <string name="shutdown_content">1. When turning on, point the remote control at the TV box and press the power button on the remote control to turn off  \n 2. When powering on, use the flying mouse cursor to click the power button in the lower-left corner of the main interface to shut down.</string>
    <string name="controller_pair_title">Remote control pairing</string>
    <string name="controller_pair_content">At the same time, press the “back button” and “ok” on the remote control, the indicator light flashes, and after about 4 seconds, the remote control pairing is completed.</string>
    <string name="controller_voice_title">Voice input method</string>
    <string name="controller_voice_content">Press and hold the voice button, the indicator light is green. Do not release the voice button when the screen says “listening...”, just say the function you need.</string>
    <string name="controller_mouse_title">How to open and close the flying mouse function</string>
    <string name="controller_mouse_content">Press the mouse button to open/close the flying mouse function</string>
    <string name="bluetooth_pair_title">Bluetooth pairing</string>
    <string name="bluetooth_pair_content">After turning on the Bluetooth in the settings, turning on the Bluetooth switch, the box will automatically detect the nearby connected Bluetooth devices, and  mouse click it will automatically recognize the connection.</string>
    <string name="wifi_connect_title">WiFi connection</string>
    <string name="wifi_connect_content">In the network and Internet in the settings, turn on WLAN, click WLAN and select the WIFI you want to connect</string>
    <string name="hotspot_title">Portable hotspot</string>
    <string name="hotspot_content">When connected to the Ethernet, open the "Network and Internet" in the settings to enter the portable hotspot function, you can open the portable hotspot.</string>
    <string name="sound_title">Sound</string>
    <string name="sound_content">Use VOL + and VOL- on the remote control to adjust the volume, or enter Settings-Sound to adjust the media volume and notification volume \"</string>
    <string name="disk_install_remove">1 Installation and removal of hard drives</string>
    <string name="disk_step1_content">1.1 Use the screws to lock the hard disk bracket on both sides of the hard disk.</string>
    <string name="disk_sideView">1.1.1 Side view:</string>
    <string name="disk_topView">1.1.2 Top view:</string>
    <string name="disk_step2_content">1.2 Push the installed hard disk interface into the device in the direction of the arrow along the track of the bracket, push it to the end, and then lock the back cover screw to complete the installation.</string>
    <string name="disk_step3_content">1.3 Open the back cover, insert the tool between the two hard disks, hook one end of the hard disk, and pull it out to complete the removal.</string>
    <string name="disk_format_init_title">2 Hard disk formatting/initialization setting steps</string>
        <string name="disk_init_two_ways">Hard disk format / initialization two kinds of setting state: 1. Air mouse state setting 2. No Air mouse state.\nSetting Tips: Air mouse state setting is more convenient.</string>
        <string name="disk_tv_init_hint">Remind:\n\n
1. When connecting to a new hard disk for the first time, the hard disk information can not be read, display unformatted or uninitialize, need to format / initialize the hard disk settings in order to read and use properly.\n\n
2. Some branded hard drives under Android can not be formatted / initialized. Please complete formatting / initialization on the Windows system then use it.\n\n
3. If you need to partition the hard disk, please complete the partition on the window system and then use it. </string>
    <string name="disk_airmouse_setting_title">2.1 Air mouse state setting step</string>
    <string name="disk_airmouse_remarks">Note:***** USB drive, * represents the name of the hard disk</string>
    <string name="disk_airmouse_step1_content">2.1.1 Press the Air mouse button on the remote control, pull out the top drop-down window,click "Click to format or initialize"</string>
    <string name="disk_airmouse_step2_content">2.1.2 Click "PORTABLE STORAGE"</string>
    <string name="disk_airmouse_step3_content">2.1.3 Pop Up"Format or Initialize this USB drive?"
        Click"FORMAT OR INTIALIZE USB DRIVE"</string>
    <string name="disk_airmouse_step4_content">2.1.4 Please do not remove the pop-up window of formatting / initializing USB storage progress.</string>
    <string name="disk_airmouse_step5_content">2.1.5 Pop-up "Your USB drive is ready to use", hard disk format /Initialization complete. </string>
    <string name="disk_no_airmouse_setting_title">2.2 No Air mouse state setting step</string>
    <string name="disk_no_airmouse_step1_content">2.2.1 Enter "Settings"</string>
    <string name="disk_no_airmouse_step2_content">2.2.2 Click "Storage"</string>
    <string name="disk_no_airmouse_step3_content">2.2.3 Click "******USB DRIVE Unformatted or uninitialized"</string>
    <string name="disk_no_airmouse_step4_content">2.2.4 After pop up"This ****** USB drive Unformatted or uninitialized",click "SET UP"</string>
    <string name="disk_no_airmouse_step5_content">2.2.5 The following steps are same as Air mouse state setting step 2.1.2 ~ 2.1.5</string>
    <string name="disk_no_airmouse_step5_list_content">2.1.2 Click "PORTABLE STORAGE"\n\n2.1.3 Pop Up"Format or Initialize this USB drive?"
        Click"FORMAT OR INTIALIZE USB DRIVE"\n\n2.1.4 Please do not remove the pop-up window of formatting / initializing USB storage progress.\n\n2.1.5 Pop-up "Your USB drive is ready to use", hard disk format /Initialization complete.\n</string>
    <string name="disk_no_airmouse_step6_content">Note:The hard disk that has been formatted / initialized will display the usage status and capacity of the hard disk.</string>
    <string name="disk_safe_quit_title">3 Hard disk safe exit steps:</string>
    <string name="disk_safe_quit_content">1.Before unplugging the hard disk, select "Settings" >, "Device Preferences" >, "Storage " >, "storage device" > "Eject", the storage device shows safety pop up, and then unplug the hard disk.</string>
    <string name="disk_safe_quit_content_warning">Tips: NO Hot Swap!</string>
    <string name="audio_output">Audio Output</string>
    <string name="audio_confirm">OK</string>
    <string name="audio_confirm_rightarrow">\></string>
    <string name="audio_hdmi">1.HDMI</string>
    <string name="audio_spdif">2.SPDIF</string>
    <string name="audio_av">3.AV</string>
    <string name="audio_hifi_sound">4.HIFI SOUND</string>
    <string name="audio_hint">Corresponding audio interface</string>
    <string name="audio_arrow">∨</string>
    <string name="audio_content_title">Audio settings and interface audio output</string>
    <string name="audio_one_content_hdmi">HDMI:HDMI port Audio output</string>
    <string name="audio_two_content_spdif">SPDIF:SPDIF port Audio output</string>
    <string name="audio_three_content_av">AV:AV port Audio output</string>
    <string name="audio_four_content_hifi_sound">HiFi SOUND:Headphone jack、RCA output port、Balance output port Audio output</string>
    <string name="resolution_title">Resolution</string>
    <string name="resolution_content">In the settings, find Droid Settings to open and enter the display menu. After finding the screen resolution, you only need to turn on the automatic switching of the optimal screen resolution.</string>
    <string name="wallpaper_title">Wallpaper</string>
    <string name="wallpaper_content">1. On the main interface, press the menu button on the remote control to select a preset theme background picture. \n  2. Settings-Display-Wallpaper, choose the wallpaper you want in the photo</string>
    <string name="favorate_title">Favorite apps</string>
    <string name="favorate_content">You can add your favorite apps to your desktop by clicking the "+/-" symbol in the blank page at the top right of the screen.</string>
    <string name="sleep_title">Sleep</string>
    <string name="sleep_content">Set your own sleep time from “Settings” - “Display” - “Sleep”. After the setting is successful, the box will enter the sleep mode within the set time. If you need to turn off the sleep mode, you need to find the version number from "Settings" - "System" - "About the device", then left click this option to open the developer option 5 times or more. The developer option can be clicked once to return to the "System" interface, and the "Developer Options" can be found in the system interface. After the developer option is turned on, the screen sleep mode can be turned off directly from the "No Lock Screen".</string>
    <string name="font_title">Font size</string>
    <string name="font_content">The font size can be adjusted by dragging to a small dot on the progress bar after "Settings" - "Display" - "Font Size".</string>
    <string name="language_title">Language</string>
    <string name="language_content">Click on Settings, find "Device Preferences" in the settings and click on this option to find the "Language" option. Languages ​​can be changed in the language options.</string>
    <string name="uninstall_title">Uninstall software</string>
    <string name="uninstall_content">When you need to uninstall a software, right-click the function and the uninstall option will appear after about 2 seconds.</string>
    <string name="help_language_title">Language modification failure</string>
    <string name="help_language_content">After switching on, the language of the system becomes Korean, and the language selection is invalid. Please turn off the language switching function in the HDMI CEC function, and then switch the language again.</string>
    <string name="help_powerkey_title">How to modify the power button customization</string>
    <string name="help_powerkey_content">Settings-Droid settings, open the power button definition, select the function you want to set the power button</string>
</resources>