<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/fragment_content_padding">

    <include layout="@layout/content_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="@dimen/fragment_content_padding">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_card_margin"
                app:cardCornerRadius="@dimen/fragment_card_radius"
                app:cardElevation="@dimen/fragment_card_elevation">

            <RelativeLayout
                android:id="@+id/rl_audio"
                android:layout_width="987dp"
                android:layout_height="800dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_audio_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="43dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/audio_all" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="412dp"
                    android:layout_marginTop="131dp"

                    android:text="@string/audio_confirm"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="430dp"
                    android:layout_marginTop="130dp"

                    android:text="@string/audio_confirm_rightarrow"
                    android:textColor="#000000"
                    android:textSize="13sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="554dp"
                    android:layout_marginTop="45dp"

                    android:text="@string/audio_hdmi"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="792dp"
                    android:layout_marginTop="46dp"

                    android:text="@string/audio_spdif"
                    android:textColor="#000000"
                    android:textSize="12sp" />


                <ImageView
                    android:id="@+id/img_audio_hdmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="463dp"
                    android:layout_marginTop="65dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/audio_hdmi" />

                <ImageView
                    android:id="@+id/img_audio_spdif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="704dp"
                    android:layout_alignTop="@+id/img_audio_hdmi"
                    android:scaleType="fitXY"
                    android:src="@mipmap/audio_spdif" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="562dp"
                    android:layout_marginTop="188dp"

                    android:text="@string/audio_av"
                    android:textColor="#000000"
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="771dp"
                    android:layout_marginTop="188dp"

                    android:text="@string/audio_hifi_sound"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/img_audio_av"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="209dp"
                    android:layout_alignLeft="@+id/img_audio_hdmi"
                    android:scaleType="fitXY"
                    android:src="@mipmap/audio_av" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/img_audio_av"
                    android:layout_alignLeft="@+id/img_audio_spdif"
                    android:scaleType="fitXY"
                    android:src="@mipmap/audio_hifi_sound" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="339dp"
                    android:text="@string/audio_hint"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="196dp"
                    android:layout_marginTop="358dp"

                    android:text="@string/audio_arrow"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/img_audio_all"
                    android:layout_marginTop="376dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/audio_hardware_display" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/img_audio_hdmi"
                    android:layout_marginTop="443dp"
                    android:text="@string/audio_content_title"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/img_audio_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="463dp"
                    android:layout_marginTop="485dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/audio_one" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/img_audio_one"
                    android:layout_marginTop="531dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/audio_two" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/img_audio_one"
                    android:layout_marginTop="580dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/audio_three" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/img_audio_one"
                    android:layout_marginTop="625dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/audio_four" />

                <TextView
                    android:id="@+id/tv_audio_one_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="488dp"
                    android:layout_marginStart="503dp"
                    android:text="@string/audio_one_content_hdmi"
                    android:textColor="#000000"
                    android:textSize="15sp" />
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_audio_one_content"
                    android:layout_marginTop="534dp"
                    android:text="@string/audio_two_content_spdif"
                    android:textColor="#000000"
                    android:textSize="15sp" />
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_audio_one_content"
                    android:layout_marginTop="583dp"
                    android:text="@string/audio_three_content_av"
                    android:textColor="#000000"
                    android:textSize="15sp" />
                />

                <TextView
                    android:layout_width="410dp"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_audio_one_content"
                    android:layout_marginTop="628dp"
                    android:text="@string/audio_four_content_hifi_sound"
                    android:textColor="#000000"
                    android:textSize="15sp" />
                />


        </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>